<resources>
    <string name="app_name">SmartBluetooth</string>
    <string name="scanning">Scanning</string>
    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string name="disconnected">Disconnect</string>
    <string name="service_uuid">Service UUID:</string>
    <string name="data_write">Date write:</string>
    <string name="data_received">Data received:</string>
    <string name="characteristic_uuid">Characteristic UUID:</string>
    <string name="back">Back</string>
</resources>
