<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="notitle"
    android:background="@color/bg_color"
    tools:context=".activity.BluetoothActivity">


    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_start_scanning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:layout_marginBottom="10dp"
            android:text="@string/start_scan"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/btn_stop_scanning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:layout_margin="10dp"
            android:text="@string/stop_scan"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_disconnected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/disconnected"
            android:textColor="@color/white"/>

    </LinearLayout>

    <ListView
        android:layout_below="@+id/ll_root"
        android:id="@+id/lv_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>
